# MP-CONTROL

./: .env.example  .gitignore  1,  CHANGELOG.md  README.md  debug_parser.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  loaders.md  loaders_ozon.md  loaders_wb.md  onboard_doc.md  stats_debug_23257751.json  stats_debug_25690526.json  test_advertising_module.py  verify_data.py  wb_finance_report.csv  wb_report_sample.json
backend/: Dockerfile  Dockerfile.prod  alembic.ini  analyze_excel.py  check_docs.py  download_doc.py  entrypoint.sh  pyproject.toml  requirements.txt  supplier_report.xlsx  test_reporting_api.py  test_sales_funnel.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_stamp.py  002_add_ozon_product_columns.py  003_add_product_costs.py
backend/app/: __init__.py  config.py  main.py
backend/app/core/: circuit_breaker.py  clickhouse.py  database.py  encryption.py  marketplace_client.py  ozon_performance_auth.py  proxy_provider.py  rate_limiter.py  redis_state.py  security.py
backend/app/models/: __init__.py  event_log.py  ozon_product.py  product.py  product_cost.py  proxy.py  shop.py  user.py  warehouse.py
backend/app/schemas/: auth.py
backend/app/services/: event_detector.py  ozon_ads_event_detector.py  ozon_ads_service.py  ozon_finance_service.py  ozon_funnel_service.py  ozon_orders_service.py  ozon_price_service.py  ozon_products_service.py  ozon_returns_service.py  ozon_seller_rating_service.py  ozon_warehouse_stocks_service.py  wb_advertising_loader.py  (+9 more)
backend/celery_app/: __init__.py  celery.py
(+68 files in other folders)
